--- a/Practice/win32api/Win32_API/Win32_API.vcxproj
+++ b/Practice/win32api/Win32_API/Win32_API.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -136,28 +136,42 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="birdScene.cpp" />
+    <ClCompile Include="cameraManager.cpp" />
+    <ClCompile Include="flappyBird.cpp" />
     <ClCompile Include="gameNode.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="imageManager.cpp" />
+    <ClCompile Include="item.cpp" />
     <ClCompile Include="keyManager.cpp" />
+    <ClCompile Include="loding.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainGame.cpp" />
+    <ClCompile Include="popolScene.cpp" />
+    <ClCompile Include="progressBar.cpp" />
     <ClCompile Include="p_Scene.cpp" />
     <ClCompile Include="sceneManager.cpp" />
     <ClCompile Include="Scene_alphaRender.cpp" />
     <ClCompile Include="Scene_animation.cpp" />
     <ClCompile Include="Scene_galaga.cpp" />
     <ClCompile Include="Scene_loopRender.cpp" />
+    <ClCompile Include="Scene_shop.cpp" />
+    <ClCompile Include="soundManager.cpp" />
     <ClCompile Include="TestProj.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="birdScene.h" />
+    <ClInclude Include="cameraManager.h" />
     <ClInclude Include="commonMacroFunction.h" />
+    <ClInclude Include="flappyBird.h" />
     <ClInclude Include="gameNode.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="imageManager.h" />
+    <ClInclude Include="item.h" />
     <ClInclude Include="keyManager.h" />
+    <ClInclude Include="loding.h" />
     <ClInclude Include="mainGame.h" />
+    <ClInclude Include="popolScene.h" />
+    <ClInclude Include="progressBar.h" />
     <ClInclude Include="p_Scene.h" />
     <ClInclude Include="randomFunction.h" />
     <ClInclude Include="sceneManager.h" />
@@ -165,8 +179,10 @@
     <ClInclude Include="Scene_animation.h" />
     <ClInclude Include="Scene_galaga.h" />
     <ClInclude Include="Scene_loopRender.h" />
+    <ClInclude Include="Scene_shop.h" />
     <ClInclude Include="setDefine.h" />
     <ClInclude Include="singletonBase.h" />
+    <ClInclude Include="soundManager.h" />
     <ClInclude Include="TestProj.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
